--- a/sanja_scepanovic.html
+++ b/sanja_scepanovic.html
@@ -1,4 +1,4 @@
-<meta charset="utf-8" /><div style="color:#808080;font-size:8pt;font-family:Arial;margin-left: 8px;">Pozdrav,<br /><p style="font-weight: bold;font-size: 9pt;margin: 15px 0 0 0;padding:0;">Sanja Šćepanović</p><br /><br /><a href="http://www.sattrakt.com" style="color: #808080 !important;"><img src="http://stcable.tv/img/sattrakt_logo6.png" /></a><br /><br />Mob.: +382 67 312 206<br /><br />
+<meta charset="utf-8" /><div style="color:#808080;font-size:8pt;font-family:Arial;margin-left: 8px;">Pozdrav,<br /><p style="font-weight: bold;font-size: 9pt;margin: 15px 0 0 0;padding:0;">Naja Čuljević</p><br /><br /><a href="http://www.sattrakt.com" style="color: #808080 !important;"><img src="http://stcable.tv/img/sattrakt_logo6.png" /></a><br /><br />Mob.: +382 67 312 206<br /><br />
 
 
 
